<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateUserFragment">

    <ImageView
        android:id="@+id/user_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:src="@drawable/baseline_person_200"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:contentDescription="@null"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/pick_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pick_image_btn_text"

        app:layout_constraintTop_toBottomOf="@id/user_iv"
        app:layout_constraintStart_toStartOf="@id/user_iv"
        app:layout_constraintEnd_toEndOf="@id/user_iv" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_label_text"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="8dp"

        app:layout_constraintTop_toBottomOf="@id/pick_image_btn"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_ti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/user_name_tv"
        app:layout_constraintStart_toStartOf="@id/user_name_tv"
        app:layout_constraintEnd_toEndOf="@id/user_name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_ie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/user_wish_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_wish_label_text"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="8dp"

        app:layout_constraintTop_toBottomOf="@id/user_name_ti"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_wish_ti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/user_wish_tv"
        app:layout_constraintStart_toStartOf="@id/user_wish_tv"
        app:layout_constraintEnd_toEndOf="@id/user_wish_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_wish_ie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_user_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_user_btn_text"

        app:layout_constraintTop_toBottomOf="@+id/user_wish_ti"
        app:layout_constraintStart_toStartOf="@+id/user_wish_ti"
        app:layout_constraintEnd_toEndOf="@+id/user_wish_ti"/>

</androidx.constraintlayout.widget.ConstraintLayout>