<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.createevent.CreateEventFragment">

    <TextView
        android:id="@+id/event_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name_label"
        android:layout_margin="8dp"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_name_ti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/event_name_label"
        app:layout_constraintEnd_toEndOf="@id/event_name_label"
        app:layout_constraintTop_toBottomOf="@id/event_name_label"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name_ie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:imeOptions="actionNext"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/event_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_date_label"
        android:layout_margin="8dp"
        style="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/event_name_ti"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/date_picker_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_on_secondary"
        style="?android:spinnerStyle"
        tools:text="01/01/2025"

        app:layout_constraintTop_toBottomOf="@id/event_date_label"
        app:layout_constraintStart_toStartOf="@id/event_date_label"
        />

    <Button
        android:id="@+id/create_event_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_event_btn_text"

        app:layout_constraintTop_toBottomOf="@id/date_picker_btn"
        app:layout_constraintStart_toStartOf="@id/event_date_label"
        app:layout_constraintEnd_toEndOf="@id/event_date_label" />
</androidx.constraintlayout.widget.ConstraintLayout>